2003-09-13  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* sources/Dia.metadata: Hide references to DiaShapeViewInfo, cause
	  its internal.
	* sources/makefile: Removed old appliance of patch
	* patches/dia-storage.h.diff: Removed not needed anymore
	* patches/removal_of_persistens.diff: Patch to remove persistens 
	  functionality in DiaCanvas, should be in DiaCanvas cvs soon.
	* api/dia-api.xml: Reflects latest changes

2003-09-09  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* sample/sample.cs: 
	* sample/glade/gui.glade: Cleaned up.
	* glue/dia-canvas-item.c: Added
	* dia/CanvasItem.custom: Added access to connected_handles
	* glue/dia-canvas-view.c: 
	* dia/CanvasView.custom: Added access to handle_layer
	* dia/PlacementTool.cs: Initial grabbing functionallity
	* PROBLEMS: Added fields which are not what they seem.

2003-09-04  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* dia/CanvasImage.cs:
	* dia/CanvasLine.cs:
	* dia/CanvasBox.cs: Remove creation of PlacementTool
	* dia/PlacementTool.custom: Removed
	* dia/PlacementTool.cs: Added
	* sources/Dia.metadata: Hide PlacementTool and
	Added out parameters rules for CanvasItem method
	AffinePointI2w and AffinePointW2i.

2003-09-03  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* api/dia-api.xml:
	* sources/Dia.metadata: Hidden the default ctor of 
	the PlacementTool.
	* dia/CanvasBox.custom:
	* dia/CanvasImage.custom:
	* dia/CanvasLine.custom: Added creation of PlacementTool for the item.
	* dia/PlacementTool.custom: Removed creation of Box, Image and Line.
	* PROBLEMS: Some problems magically goes away.
	* sample/sample.cs: Updated to accomodate api changes.

2003-08-31  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* api/dia-api.xml:
	* sources/Dia.metadata: Hide DiaShapeItemInfo and
	DiaShapeViewInfo cause they are only used internally.
	* PROBLEMS: Updated info on GDestroyNotify

2003-08-26  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* doc/en/Dia/CanvasItemForeachFunc:
	* doc/en/Dia/CanvasViewItemForeachFunc: Documented