@@ -1,38 +1,18 @@
-API_DIR=api
-CODE_DIR=dia
-SAMPLE_DIR=sample
-SOURCES_DIR=sources
-DOC_DIR=doc
-GLUE_DIR=glue
+DIRS=glue api dia doc
 
-all: code library samples docs diaglue
+all: build
 
-xml:	
-	$(MAKE) -C $(SOURCES_DIR)
-
-code:	
-	$(MAKE) -C $(API_DIR)
-
-library:
-	$(MAKE) -C $(CODE_DIR)
-
-samples:
-	$(MAKE) -C $(SAMPLE_DIR)
-
-docs:
-	$(MAKE) -C $(DOC_DIR)
-
-diaglue:
-	$(MAKE) -C $(GLUE_DIR)
+build:
+	for i in $(DIRS); do                    \
+		$(MAKE) -C $$i || exit 1;	\
+	done
 
 install:
-	$(MAKE) -C $(CODE_DIR) install
-	$(MAKE) -C $(GLUE_DIR) install
-	$(MAKE) -C $(DOC_DIR) install
+	for i in $(DIRS); do                     	\
+		$(MAKE) -C $$i install || exit 1;	\
+	done
 
 clean:
-	$(MAKE) -C $(API_DIR) clean
-	$(MAKE) -C $(CODE_DIR) clean
-	$(MAKE) -C $(SAMPLE_DIR) clean
-	$(MAKE) -C $(DOC_DIR) clean
-	$(MAKE) -C $(GLUE_DIR) clean
+	for i in $(DIRS); do        	     	\
+		$(MAKE) -C $$i clean || exit 1;	\
+	done
